# ctx-eng-plus

./: .coverage  .gitignore  .markdownlint.json  CHANGELIST-REVIEW-PRP-29.1.md  CHANGELOG.md  CLAUDE.md  CMD_V_IMAGE_PASTE_SOLUTION.md  INITIAL.md  PEER-REVIEW-IMPROVEMENTS-SUMMARY-PRP-29-SERIES.md  PRP-29.1-IMPLEMENTATION-SUMMARY.md  PRP-30-SETUP-GUIDE.md  PRP-39-PLAN.md  README.md  RELEASE_NOTES.md  TOOL-LOCKDOWN-REPLKAN.md  TOOL-PERMISSION-LOCKDOWN-PLAN.md  TOOL-USAGE-GUIDE.md  package-lock.json  package.json
tools/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  repomix-output.xml
tools/ce/: __main__.py  blend.py  blueprint_parser.py  cli_handlers.py  code_analyzer.py  config_loader.py  context.py  core.py  drift.py  drift_analyzer.py  exceptions.py  execute.py  generate.py  init_project.py  linear_mcp_resilience.py  linear_utils.py  logging_config.py  mcp_adapter.py  mcp_utils.py  mermaid_validator.py  pattern_detectors.py  pattern_extractor.py  pipeline.py  profiling.py  prp.py  repomix_unpack.py  resilience.py  shell_utils.py  toml_merger.py  update_context.py  vacuum.py  validate.py  validation_loop.py
tools/scripts/: cache-syntropy-health.py  list-mcp-tools.py  session-startup.sh  syntropy-status.py
tools/tests/: __init__.py  test_atomic_writes.py  test_blend_claude_md.py  test_blend_core.py  test_blend_examples.py  test_blend_memories.py  test_blend_settings.py  test_cleanup.py  test_cli.py  test_cli_handlers.py  test_config_loader.py  test_context.py  test_detection.py  test_drift_comprehensive.py  test_e2e_blend.py  test_execute.py  test_generate.py  (+20 more)
(+682 files in other folders)
